--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "express": "^4.14.0",
     "node": "0.0.0",
+    "node-xml-lite": "0.0.7",
     "nodemon": "^1.10.0",
+    "path": "^0.12.7",
     "xml2js": "^0.4.17"
   }
 }
